# doosan-robot2

./: README.md  calibration_params.json
common2/imp/: DSR_ROBOT2.py
dsr_controller2/config/: dsr_controller2.yaml
dsr_description2/xacro/: _d435.urdf.xacro  a0509.urdf.xacro
dsr_example2/example/example/demo/: dance_m1013.py
dsr_example2/visualservoing/visualservoing/: detect_marker_gz.py  send_pose_servol_gz.py
dsr_hardware2/src/: dsr_hw_interface2.cpp
dsr_moveit2/a0509_moveit_config/config/: a0509.urdf.xacro  chomp_planning.yaml  dsr.srdf  ros2_controllers.yaml
dsr_moveit2/a0509_moveit_config/launch/: start.launch.py
dsr_moveit_task/: CMakeLists.txt  package.xml
dsr_moveit_task/src/: moveit_test.cpp
dsr_msgs2/: CMakeLists.txt
dsr_msgs2/action/: DsrTask.action
dsr_msgs2/srv/gripper/: GripperChange.srv
dsr_sensor/: CMakeLists.txt  package.xml
dsr_sensor/config/: MultiMatrix.npz
dsr_sensor/scripts/: arucomarker_detect.py  camera_to_base.py  test_calibration.py  test_marder.py  trans_cam_to_base.py  trans_link6_to_cam.py
dsr_task/: CMakeLists.txt  package.xml  setup.cfg  setup.py
dsr_task/dsr_task/: gripper_control.py  homming.py  image_capture.py  move_robot.py  tool_changer.py  tool_changer2.py  trans.py
dsr_task/launch/: dsr_task.launch.py
dsr_task/src/: moveit_task.cpp
