<?xml version="1.0"?>
<package format="2">
  <name>dsr_sensor</name>
  <version>0.1.0</version>
  <description>A package for detecting ArUco markers using OpenCV and ROS2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>ament_index_python</depend>
  <depend>opencv</depend>
  <depend>common2</depend>
  <depend>dsr_msgs2</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
