# cmake_minimum_required(VERSION 3.8)
# project(dsr_task)

# # Find dependencies
# find_package(ament_cmake REQUIRED)
# find_package(rclcpp REQUIRED)
# find_package(moveit_ros_planning_interface REQUIRED)
# find_package(geometry_msgs REQUIRED)

# # Add executable
# add_executable(moveit_task src/moveit_task.cpp)

# # Link libraries
# ament_target_dependencies(moveit_task
#   rclcpp
#   moveit_ros_planning_interface
#   geometry_msgs
# )

# install(TARGETS moveit_task
#   DESTINATION lib/${PROJECT_NAME}
# )

# ament_package()
